# vgg_cpp_sdk

./: .gitignore  CMakeLists.txt  readme.md
example/: main.cpp
src/: vgg_sdk.cpp  vgg_sdk.hpp  vgg_sdk.js  vgg_sdk_bridge.js
test/: index.html
